Add category, status, tag & gpx file routes (with a generic crud router)
